# qazaq-salary-survay

./: .env  .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml
docker/: docker-compose-local.yml
src/: lib.rs  main.rs  mongo_connection.rs
src/profiles/: handler.rs  mod.rs  repository.rs
