[package]
name = "qazaq_salary_survey"
version = "0.1.0"
authors = ["Max Khrichtchatyi <maxim.khrichtchatyi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-mongodb = "0.2.2"
rocket = "0.4.6"
rocket_codegen = "0.4.6"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

# Benches
criterion = "0.3.3"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4"

[[bench]]
name = "my_benchmark"
harness = false